feat(web): add UI to upload game files
This allows us to deploy a public static page
that does not require manually adding the `.pk3` files
to the HTTP server's directory.
This way the page can be used by regular people.

Additionally, in the future this might simplify
the development workflow of reviewing MRs,
because this does not require downloading any files
to run the preview build.

The approach is taken from
- https://github.com/jdarpinian/ioq3/blob/7801abd5ac510a889087ad62473c54dbe509e106/code/web/index.html#L614-L660
- https://github.com/WofWca/quake3.xdc/blob/be18795b56a0e408514e78201a731f38c1a92bc6/upload-full-version.html

Co-authored-by: James Darpinian <jdarpinian@gmail.com>

--- a/code/web/client.html
+++ b/code/web/client.html
@@ -103,10 +103,34 @@ ioquake3({
                     console.warn(`Game directory '${gamedir}' cannot be used. It must have files listed in ${configFilename}.`);
                     continue;
                 }
+                const cache = await caches.open('quake-game-files');
                 const files = config[gamedir].files;
-                const fetches = files.map(file => [file, fetch(new URL(file.src, dataURL))]);
-                const writeFilePromises = fetches.map(async ([file, resP]) => {
-                    const response = await resP;
+                /** @type {Array<Promise<[FileConfig, Response]>>} */
+                const fetches = files.map(async file => [
+                    file,
+                    (await cache.match(file.src)) ??
+                        (await fetch(new URL(file.src, dataURL))),
+                ]);
+
+                Promise.all(fetches).then(fetches => {
+                    const missingFiles = fetches
+                        .filter(([file, response]) => !response.ok)
+                        .map(([file]) => file.src)
+                    if (missingFiles.length !== 0) {
+                        // Preserve query parameters,
+                        // so that that page knows where to return to.
+                        const nextPathname = new URL(
+                            './upload-game-files-to-cache.html',
+                            location.href
+                        ).pathname;
+                        const nextUrl = new URL(location.href);
+                        nextUrl.pathname = nextPathname;
+                        location.assign(nextUrl);
+                    }
+                });
+
+                const writeFilePromises = fetches.map(async (p) => {
+                    const [file, response] = await p;
                     if (!response.ok) return;
                     const data = await response.arrayBuffer();
                     let name = file.src.match(/[^/]+$/)[0];
