improvement(web): rename to `index.html`
This simplifies navigating to the web version.
You don't have to search and click the `ioquake3.html` file.

This is especially useful for the GitHub pages deployment.
The deployment workflows sort of expect `index.html`
to be present.
They usually print `.../ioq3/` as the final URL,
but GitHub pages doesn't allow you to browse the files.
It simply says `404` if there is no `index.html`.
This commit should fix it.

--- a/code/web/index.html
+++ b/code/web/index.html
@@ -30,7 +30,7 @@ if (clientHtmlFallback) {
     configFilename='./client-config.json';
 }
 
-if (window.location.protocol === 'file:') throw new Error(`Unfortunately browser security restrictions prevent loading wasm from a file: URL. This file must be loaded from a web server. The easiest way to do this is probably to use Python\'s built-in web server by running \`python3 -m http.server\` in the top level source directory and then navigate to http://localhost:8000/build/debug-emscripten-wasm32/${CLIENTBIN}.html`);
+if (window.location.protocol === 'file:') throw new Error(`Unfortunately browser security restrictions prevent loading wasm from a file: URL. This file must be loaded from a web server. The easiest way to do this is probably to use Python\'s built-in web server by running \`python3 -m http.server\` in the top level source directory and then navigate to http://localhost:8000/build/debug-emscripten-wasm32/index.html`);
 
 // First set up the command line arguments and the Emscripten filesystem.
 const urlParams = new URLSearchParams(window.location.search);
