--- a/code/web/upload-game-files-to-cache.html
+++ b/code/web/upload-game-files-to-cache.html
@@ -165,7 +165,7 @@
             // the previous page would simply remain in the previous state,
             // i.e. the JavaScript will not re-execute.
             const nextPathname = new URL(
-                './ioquake3.html',
+                './index.html',
                 location.href
             ).pathname;
             const nextUrl = new URL(location.href);
